--- a/client/styles/home.css
+++ b/client/styles/home.css
@@ -6,3 +6,41 @@
     width: 100%;
     height: 600px;
 }
+.aboutUsHomeContainer{
+
+}
+.aboutUsHomeContainer .aboutUsContent{
+}
+.aboutUsHomeContainer .aboutUsContent header{
+    padding: 10px 30px;
+}
+.aboutUsHomeContainer .aboutUsContent .contentContainer{
+    width: 60%;
+    padding: 5px 40px;
+    float: left;
+    text-align: justify;
+    margin-right: 50px;
+}
+.aboutUsHomeContainer .aboutUsContent .sideContent{
+    float: left;
+}
+.aboutUsHomeContainer .aboutUsContent .sideContent .whatNewContainer{
+    margin: 0px 0px 5px 40px;
+    padding: 0px;
+}
+.aboutUsHomeContainer .aboutUsContent .whatNewContainer .whatsNewList{
+    list-style: none;
+}
+.aboutUsHomeContainer .aboutUsContent .whatNewContainer .whatsNewList .whatsNewListItem {
+    padding-bottom: 15px;
+}
+.aboutUsHomeContainer .aboutUsContent .whatNewContainer .whatsNewList .whatsNewListItem:hover a:hover {
+    background: brown;
+    color: white;
+    padding: 5px;
+}
+.aboutUsHomeContainer .aboutUsContent .whatNewContainer .whatsNewList .whatsNewListItem a{
+    text-decoration: none;
+    color: darkslategray;
+}
+
